k8s/webflux-jpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webflux-jpa
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webflux-jpa-service
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webflux-jpa-service
spec:
  type: ClusterIP
  selector:
    app: webflux-jpa
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflux-jpa-deployment
spec:
  selector:
    matchLabels:
      app: webflux-jpa
  template:
    metadata:
      labels:
        app: webflux-jpa
    spec:
      containers:
      - name: webflux-jpa
        image: localhost:32000/webflux-jpa
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
        - name: actuator
          containerPort: 8090
        readinessProbe:
          httpGet:
            port: actuator
            path: /actuator/health/readiness
          initialDelaySeconds: 60
          periodSeconds: 120
          successThreshold: 1
          failureThreshold: 3

        livenessProbe:
          httpGet:
            port: actuator
            path: /actuator/health/liveness
          initialDelaySeconds: 60
          periodSeconds: 120
          successThreshold: 1
          failureThreshold: 3
